--- a/index.html
+++ b/index.html
@@ -95,11 +95,11 @@
     </section>
     <section id="resume">
       <h2>Resume</h2>
-      <a href="Sanket%20Dharwadkar%20Resume.pdf" target="_blank">Download Resume (PDF)</a>
+  <a href="assets/Sanket%20Dharwadkar%20Resume.pdf" target="_blank" download>Download Resume (PDF)</a>
       <h3>Education</h3>
       <ul>
-        <li><strong>Binghamton University</strong> – MS in Biomedical Engineering (May 2017)</li>
-        <li><strong>Mumbai University</strong> – BE in Biomedical Engineering (May 2014)</li>
+        <li><strong>Binghamton University</strong> – Master of Science in Biomedical Engineering (May 2017)</li>
+        <li><strong>Mumbai University</strong> – Bachelor of Engineering in Biomedical Engineering (May 2014)</li>
       </ul>
       <h3>Certifications</h3>
       <ul>
